tests/rosetta/out/Smalltalk/100-doors.out
/tmp/100-doors.st:5: parse error, expected ']'
